# shared-memory-dict

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
benchmarks/: asynchronous.py  fake_django_settings.py  sync.py
examples/gunicorn-aiocache-api/: README.md  gunicorn_config.py  main.py
shared_memory_dict/: __init__.py  dict.py  hooks.py  lock.py  serializers.py  templates.py
shared_memory_dict/caches/: aiocache.py  django.py
tests/: test_dict.py  test_general.py  test_hooks.py  test_serializers.py
tests/caches/: test_aiocache.py  test_django.py
