[tool.poetry]
name = "shared-memory-dict"
version = "0.1.0"
description = "A very simple shared memory dict implementation"
authors = ["Arquitetura LuizaLabs <arquitetura@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = { version = "^3.0.8", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-coverage = "^0.0"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"
isort = "^5.0.4"
aiocache = "^0.11.1"
pytest-asyncio = "^0.14.0"

[tool.poetry.extras]
django = ["django"]
aiocache = ["aiocache"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
