[tool.poetry]
name = "shared-memory-dict"
version = "0.5.0"
description = "A very simple shared memory dict implementation"
authors = ["Arquitetura LuizaLabs <arquitetura@luizalabs.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luizalabs/shared-memory-dict"
repository = "https://github.com/luizalabs/shared-memory-dict"
keywords = ["django", "aiocache", "shared memory"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
django = { version = "^3.0.8", optional = true}
aiocache = { version = "^0.11.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-coverage = "^0.0"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^19.10b0"
isort = "^5.0.4"
aiocache = "^0.11.1"
pytest-asyncio = "^0.14.0"

[tool.poetry.extras]
django = ["django"]
aiocache = ["aiocache"]
all = ["django", "aiocache"]

[tool.isort]
known_first_party = "shared_memory_dict"
atomic = true
line_length = 79
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage.run]
omit = ["*/*/tests/*", "*/*/settings/*"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 79
